--- a/style.css
+++ b/style.css
@@ -1,12 +1,10 @@
 /*
-Theme Name: Altair
-Theme URI: http://themes.themegoods2.com/altair
-Description: Premium Travel Agency Template
+Theme Name: APA
+Theme URI: http://elikem.io
+Description: WordPress theme based on Altair.
 Version: 3.4
-Tags: gray, white, responsive-layout, custom-header, custom-background, threaded-comments, translation-ready, editor-style, custom-menu
-Author: ThemeGoods
-Author URI: http://themeforest.net/user/ThemeGoods
+Author: Elikem Adadevoh
+Author URI: http://elikem.io
 License: GNU General Public License
 License URI: http://themeforest.net/licenses/regular_extended
-Text Domain: altair
 */
